<resources>
    <string name="app_name">Netflix</string>
    <string name="serie">House of Cards</string>
    <string name="menu_mensagem"/>
    <string name="Menu_Value">" Mensagem"</string>
    <string name="Menu_volume">Volume</string>
    <string name="Menu_favoritos">Favoritos</string>
    <string name="Menu_episodios">episodios</string>
    <string name="temporada_value">S1:E2</string>
    <string name="Nome_Serie">House of Cards</string>
</resources>